# discover-portage-backend

./: .gitignore  .gitmodules  Makefile  README.md  dev_install.sh
include/: README.md
include/libdiscover/: DiscoverConfig.h.in  discovercommon_export.h
src/: CMakeLists.txt  DiscoverConfig.h
src/PortageBackend/: CMakeLists.txt  PortageBackend.cpp  PortageResource.cpp  PortageResource.h  PortageTransaction.cpp  PortageTransaction.h  PortageUseFlags.cpp  PortageUseFlags.h  portageui.qrc
src/PortageBackend/auth/: PortageAuthClient.cpp  PortageAuthClient.h  PortageAuthHelper.cpp  PortageAuthHelper.h
src/PortageBackend/backend/: PortageBackend.cpp  PortageBackend.h  PortageQmlInjector.cpp  PortageQmlInjector.h
src/PortageBackend/config/: MakeConfReader.cpp  MakeConfReader.h  org.kde.discover.portagebackend.conf  org.kde.discover.portagebackend.policy  org.kde.discover.portagebackend.service  portage-backend.json
src/PortageBackend/dialogs/: UseFlagsDialog.cpp  UseFlagsDialog.h
src/PortageBackend/emerge/: EmergeRunner.cpp  EmergeRunner.h  UnmaskManager.cpp  UnmaskManager.h
src/PortageBackend/installed/: PortageInstalledReader.cpp  PortageInstalledReader.h
src/PortageBackend/qml/: AddRepositoryDialog.qml  PortageActionInjector.qml  ReinstallAction.qml  UseFlagsButton.qml  UseFlagsInfo.qml
src/PortageBackend/repository/: PortageRepositoryConfig.cpp  PortageRepositoryConfig.h  PortageRepositoryReader.cpp  PortageRepositoryReader.h  PortageSourcesBackend.cpp  PortageSourcesBackend.h
src/PortageBackend/resources/: PortageResource.cpp  PortageResource.h  PortageUseFlags.cpp  PortageUseFlags.h
src/PortageBackend/transaction/: PortageTransaction.cpp  PortageTransaction.h
src/PortageBackend/utils/: AtomParser.h  PortagePaths.h  QmlEngineUtils.cpp  QmlEngineUtils.h  StringUtils.h
